# trading-claude

./: .gitignore  DASHBOARD.md  DISTRIBUTION.md  README.md  SUMMARY.md  dashboard.html  profile_backtest.py  pyproject.toml  serve_dashboard.py  test_next_day.py
docs/: README.md
docs/architecture/: overview.md
docs/components/: cli.md  data-layer.md  look-ahead-bias.md  order-execution.md
docs/user-guide/: installation.md
examples/: analyze_transactions.py  quick_test.py  simple_backtest.py  transaction_viewer.html
results/: transactions_20251122_144334.json
src/trading_claude/: __init__.py  backtest.py  cli.py  config.py  data.py  metrics.py  models.py  strategy.py  transaction_log.py
tests/: test_config.py  test_models.py
